--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,15 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Visual Studio Code
 .vscode/
+
+# nMigen
+build/
+*.vcd
+*.gtkw
+
+# SymbiYosys
+*_cover/
+*_bmc/
+*_prove/
